[gd_scene load_steps=13 format=3 uid="uid://j4bckuvmye8b"]

[ext_resource type="PackedScene" uid="uid://8evjkx7qf0nw" path="res://Player/player.tscn" id="1_m5rj2"]
[ext_resource type="Script" path="res://World/main_world.gd" id="1_xbkw4"]
[ext_resource type="PackedScene" uid="uid://b50k2kppb8mn1" path="res://enemy.tscn" id="3_drf27"]
[ext_resource type="Texture2D" uid="uid://bu4f3id3ro1as" path="res://1458354030536.jpg" id="3_tes47"]
[ext_resource type="PackedScene" uid="uid://c2xqp3rueml0y" path="res://pause_menu.tscn" id="5_ga724"]
[ext_resource type="PackedScene" uid="uid://bpoodd1atsbyl" path="res://Interactions/store_screen.tscn" id="6_bi4ix"]
[ext_resource type="Script" path="res://Interactions/store_screen.gd" id="7_6vvh5"]
[ext_resource type="Script" path="res://Interactions/playerHealthBar.gd" id="8_4xphq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vs1g8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mp7v"]
size = Vector2(42, 78)

[sub_resource type="Theme" id="Theme_uemjd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qae37"]
bg_color = Color(0.705882, 0, 0, 1)

[node name="World" type="Node"]
process_mode = 1
script = ExtResource("1_xbkw4")

[node name="CharacterBody2D" parent="." instance=ExtResource("1_m5rj2")]
position = Vector2(478, 358)
chassis = 0

[node name="Camera" type="Camera2D" parent="CharacterBody2D"]

[node name="pauseMenu" parent="CharacterBody2D" instance=ExtResource("5_ga724")]
visible = false
offset_left = -479.0
offset_top = -412.0
offset_right = 502.0
offset_bottom = 212.0

[node name="1458354030536" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(540, 354)
texture = ExtResource("3_tes47")

[node name="Enemy" parent="." instance=ExtResource("3_drf27")]
position = Vector2(594, 350)

[node name="Area2D2" type="Area2D" parent="Enemy"]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Area2D2"]
scale = Vector2(1.6, 1.6)
shape = SubResource("CapsuleShape2D_vs1g8")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Collision_Floor" type="CollisionPolygon2D" parent="StaticBody2D"]
light_mask = 3
polygon = PackedVector2Array(-261, 695, -4, 695, 65, 647, 548, 648, 625, 705, 1341, 707, 1340, 801, -259, 802)

[node name="Polygon_Floor" type="Polygon2D" parent="StaticBody2D/Collision_Floor"]
color = Color(0.0705882, 0.0705882, 0.211765, 1)

[node name="Collision_Ceil" type="CollisionPolygon2D" parent="StaticBody2D"]
top_level = true
light_mask = 3
visibility_layer = 3
polygon = PackedVector2Array(-259, -96, -261, 693, 54, 693, 54, 545, -258, 545, -207, 306, -52, 306, -56, 64)

[node name="Polygon_Ceil" type="Polygon2D" parent="StaticBody2D/Collision_Ceil"]
color = Color(0.0705882, 0.0705882, 0.211765, 1)

[node name="Store" type="Node2D" parent="."]
position = Vector2(-202, 496.92)

[node name="Area2D" type="Area2D" parent="Store"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Store/Area2D"]
position = Vector2(-31, 7.07999)
shape = SubResource("RectangleShape2D_2mp7v")

[node name="storeScreen" parent="." instance=ExtResource("6_bi4ix")]
offset_left = -494.0
offset_top = 557.0
offset_right = -494.0
offset_bottom = 557.0
script = ExtResource("7_6vvh5")

[node name="Label" parent="storeScreen" index="0"]
offset_left = 19.0
offset_top = -119.0
offset_right = 553.0
offset_bottom = 212.0

[node name="lightC" parent="storeScreen/Label" index="4"]
offset_left = 402.0
offset_right = 485.0

[node name="heavyC" parent="storeScreen/Label" index="5"]
offset_top = 175.0
offset_bottom = 206.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
light_mask = 3
visibility_layer = 3
offset_right = 127.0
offset_bottom = 27.0
theme = SubResource("Theme_uemjd")
theme_override_colors/font_color = Color(1, 0.988235, 0.988235, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_qae37")
value = 100.0
script = ExtResource("8_4xphq")

[connection signal="body_entered" from="Store/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Store/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="storeScreen/Label/autoCannon" to="CharacterBody2D" method="_on_auto_cannon_pressed"]
[connection signal="pressed" from="storeScreen/Label/triBlast" to="CharacterBody2D" method="_on_tri_blast_pressed"]
[connection signal="pressed" from="storeScreen/Label/lightC" to="CharacterBody2D" method="_on_light_c_pressed"]
[connection signal="pressed" from="storeScreen/Label/heavyC" to="CharacterBody2D" method="_on_heavy_c_pressed"]

[editable path="storeScreen"]
